[tool.poetry]
name = "web-scraping-course"
version = "0.1.0"
description = "arquivos do curso de web scraping"
authors = ["Loshad <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.9.3"
lxml = "^4.6.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
